# rapidlog

./: AGENTS.md  Cargo.toml  PLAN.md  README.md  custom_serde_format_plan.md  progress.txt
benches/: logging.rs
docs/: phase4-plan.md  schema.md
examples/: verify.rs
rapidlog_derive/: Cargo.toml
rapidlog_derive/src/: lib.rs
src/: arg.rs  backend.rs  config.rs  filter.rs  formatter.rs  frontend.rs  level.rs  lib.rs  logger.rs  macros.rs  message.rs  metadata.rs  queue.rs  sink.rs  thread_context.rs  timestamp.rs
src/arg/: compound.rs  container.rs  mod.rs  pointer.rs  primitives.rs  schema.rs  traits.rs
src/sinks/: console.rs  file.rs  mod.rs  null.rs  rotating.rs
tests/: arg_format.rs  integration.rs
