[package]
name = "rapidlog"
version = "0.1.0"
edition = "2024"

[dependencies]
rtrb = "0.3"
parking_lot = "0.12"
anstream = "0.6"
is-terminal = "0.4"
time = "0.3"
thiserror = "2"
rapidlog_derive = { path = "./rapidlog_derive" }

[features]
max_level_trace = []
max_level_debug = []
max_level_info = []
max_level_warning = []
max_level_error = []
tsc_clock = []

[lib]
bench = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "logging"
harness = false
